package ar.edu.utn.ba.ddsi.climalert.models.entities;

public interface Alertador {
    abstract public void enviarAlerta();
}
