package ar.edu.utn.ba.ddsi.climalert.services;

public class AlertService {
}
