package ar.edu.utn.ba.ddsi.climalert.services;

// Se comunica con los mails
public class MailService {
}
