package ar.edu.utn.ba.ddsi.climalert.services;

// Traer la información
public class WeatherService {ss
}
