@startuml


'
class WeatherService{
    - analizadorClima : AnalizadorClima
    - obtenerClimaActual(fecha : LocalDate) : Clima
    - obtenerClima() : ClimaDTO
    - analizarClima(clima) : void
    - guardarClima(clima) : void
}

class AnalizadorClima{
    - climaEsAlerta(clima: Clima) : bool
}

WeatherService --> AnalizadorClima

class AlertService{
- alertadores : Alertadores
- enviarAlerta()
}
interface Alertador{
- enviarAlerta()
}

class MailAlertador extends Alertador {
- mailDestino : String
- enviarAlerta()
}

' manda los mails
class MailService{
- provider?
- enviarMail(direccion: string, contenido : String)
}

AlertService --* Alertador
AlertService --- MailService
WeatherService --- AlertService

@enduml